test/runtime/fail/loop/missing_open.hy

// expect error: Expected `{`

loop
	let a = 3
}
